<resources>
    <string name="app_name">Millionaire</string>
    <string name="who_want_to_be_millions">Who want to be millions</string>
    <string name="name">name</string>
    <string name="start">start</string>
    <string name="space_for_question">Space for question?</string>
    <string name="a_option_one">A. option one</string>
    <string name="b_option_two">B. option two</string>
    <string name="c_option_three">C. option three</string>
    <string name="d_option_four">D. Option four</string>
    <string name="submit">submit</string>
    <string name="question_number_1_1000">Question number 1: $1000</string>
    <string name="congratulation">Congratulation!!!</string>
    <string name="you_won">you won</string>
    <string name="start_new_game">START NEW GAME</string>
    <string name="new_player">NEW PLAYER</string>
    <string name="millionaire">You become a millionaire.</string>
    <string name="loosing_message">You only manage to win</string>
</resources>
