<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YouOwn">

    <TextView
        android:id="@+id/textView_congratulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/textView_win"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textView_win"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:text="@string/you_won"
        app:layout_constraintTop_toBottomOf="@id/textView_congratulation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_new_game"
        android:layout_marginBottom="32dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_new_game"
        android:background="@drawable/btn_background_select"
        app:layout_constraintTop_toBottomOf="@id/textView_win"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:id="@+id/button_new_game"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button_new_player"/>

    <Button
        android:layout_marginTop="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_new_player"
        android:text="@string/new_player"
        android:padding="16dp"
        android:background="@drawable/btn_background_normal"
        app:layout_constraintTop_toBottomOf="@id/button_new_game"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>